@@ -9,4 +9,5 @@ General: remove internal libheif and libde265 from core in favor to system libra
 BUGFIXES:
 
 001 ==> 450567 - When editing a group caption, the digiKam does not warn of possible information loss.
-002 ==> 
+002 ==> 450587 - Inconsistent disabled state of Save action after Undo/Redo.
+003 ==> 
